<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:text="@string/bmw"
        android:textColor="#000"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/car"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/car"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="105dp"
        android:text="@string/bmw_is_the_first"
        android:textColor="#000"
        android:textSize="20sp" />
</RelativeLayout>