<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/MainLayout">


    <androidx.cardview.widget.CardView
        android:layout_width="423dp"
        android:layout_height="94dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ImageView
                android:id="@+id/images"
                android:layout_width="107dp"
                android:layout_height="94dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/image"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="284dp"
                android:layout_height="34dp"
                android:layout_margin="5dp"
                android:text="@string/Title"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.424"
                app:layout_constraintStart_toEndOf="@+id/images"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.287" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="279dp"
                android:layout_height="21dp"
                android:layout_margin="5dp"
                android:text="@string/Sub"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toEndOf="@+id/images"
                app:layout_constraintTop_toBottomOf="@+id/mainTitle"
                app:layout_constraintVertical_bias="0.304" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>